--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 
   <body>
 
-    {%- include header.html -%}
+    {%- include navbar.html -%}
 
     <div class="py-5">
       <div class="container page-content">
