--- a/assets/main.scss
+++ b/assets/main.scss
@@ -7,3 +7,59 @@
 @import "syntax-highlighting";
 @import "bootstrap-4-jekyll/bootstrap-4-jekyll";
 @import "bootstrap_customization";
+
+.header {
+
+    // @include stretch-to-vw;
+
+    overflow: hidden;
+    margin-bottom: 5em;
+    margin-top: 5em;
+    color: white;
+
+    .background {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        z-index: -10;
+        opacity: 1;
+
+        filter: brightness(50%);
+
+        background-image: brightness(10%);
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center center;
+    }
+
+    h1 {
+        margin-top: 3em;
+        margin-bottom: 1em;
+        font-size: 1.5em;
+        @include media-breakpoint-up(sm) { font-size: 2em; }
+        @include media-breakpoint-up(md) { font-size: 3em; }
+        @include media-breakpoint-up(lg) { font-size: 3em; }
+        @include media-breakpoint-up(xl) { font-size: 4em; }
+    }
+}
+
+main {
+
+    img {
+      max-width: 100%;
+      margin: 0 auto;
+      display: block;
+    }
+  
+    iframe {
+      width: 100%;
+      border: none;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    .image {
+        font-size: 0.5em;
+    }
+
+}
