Good progress on style

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,8 @@
+
 <header class="header">
-  <div class="background" style="background-image: url('{{ include.url }}')"></div>
+  <div class="background" style="background-image: url('/{{include.img}}')"></div>
   <div class="container">
-      <h1>
+      <h1 class="text-white">
           {{ include.text }}
       </h1>
   </div>
