--- a/assets/main.scss
+++ b/assets/main.scss
@@ -23,7 +23,7 @@
     margin-bottom: 5em;
     margin-top: 0em;
     color: white;
-    min-height: 500px;
+    height: 500px;
 
     .background {
         position: absolute;
