--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 
     {%- include navbar.html -%}
 
-    <div class="py-5">
+    <div class="page py-5">
       <div class="container page-content">
           {{ content }}
       </div>
