--- a/assets/main.scss
+++ b/assets/main.scss
@@ -43,18 +43,18 @@
     h1 {
         margin-top: 1em;
         margin-bottom: 1em;
-        font-size: 1em;
-        @include media-breakpoint-up(sm) { font-size: 1em; }
-        @include media-breakpoint-up(md) { font-size: 1.5em; }
-        @include media-breakpoint-up(lg) { font-size: 1.5em; }
-        @include media-breakpoint-up(xl) { font-size: 2em; }
+        font-size: 2em;
+        @include media-breakpoint-up(sm) { font-size: 1.5em; }
+        @include media-breakpoint-up(md) { font-size: 2em; }
+        @include media-breakpoint-up(lg) { font-size: 2em; }
+        @include media-breakpoint-up(xl) { font-size: 2.5em; }
     }
 }
 
 .navbar {
 
     background-color: white;
-    height: 5em;
+    min-height: 5em;
     padding-top: 0em;
     padding-bottom: 0em;
 
