--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,13 @@
 
-<div class="py-5 border-top">
+<div class="py-5 border-top footer">
   <div class="container">
 
-    <p class="h5 mb-3">{{ site.title | escape }}</p>
-
     <div class="row">
+
+      <div class="col-sm">
+        <h2>Rue du Trésor 9, 2000 Neuchâtel</h2>
+        <img src="/assets/images/footer.jpg" class="img-fluid" alt="Responsive image">
+      </div>
 
       <div class="col-sm">
         <ul class="list-unstyled">
