--- a/assets/main.scss
+++ b/assets/main.scss
@@ -41,6 +41,42 @@
     }
 
     h1 {
+        margin-top: 3em;
+        margin-bottom: 1em;
+        font-size: 2em;
+        @include media-breakpoint-up(sm) { font-size: 2em; }
+        @include media-breakpoint-up(md) { font-size: 2.5em; }
+        @include media-breakpoint-up(lg) { font-size: 3em; }
+        @include media-breakpoint-up(xl) { font-size: 3em; }
+    }
+}
+
+.title-header {
+
+    @include stretch-to-vw;
+
+    overflow: hidden;
+    margin-bottom: 5em;
+    margin-top: 0em;
+    color: white;
+    height: 600px;
+
+    .background {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        z-index: -10;
+        opacity: 1;
+
+        filter: brightness(50%);
+
+        background-image: brightness(10%);
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center center;
+    }
+
+    h1 {
         margin-top: 1em;
         margin-bottom: 1em;
         font-size: 1.5em;
@@ -64,6 +100,20 @@
 
     margin-top: 0em !important;
     padding-top: 0em !important;
+
+}
+
+.footer {
+
+    h2 {
+
+        font-size: 1em;
+        @include media-breakpoint-up(sm) { font-size: 1em; }
+        @include media-breakpoint-up(md) { font-size: 1em; }
+        @include media-breakpoint-up(lg) { font-size: 1em; }
+        @include media-breakpoint-up(xl) { font-size: 1.5em; }
+    
+    }
 
 }
 
