--- a/_layouts/title_page.html
+++ b/_layouts/title_page.html
@@ -8,6 +8,9 @@ layout: default
         <h1 class="text-white">
             {{ page.title }}
         </h1>
+        <h2>
+            {{ page.address }}
+        </h2>
     </div>
 </header>
 
