--- a/assets/main.scss
+++ b/assets/main.scss
@@ -79,10 +79,21 @@
     h1 {
         margin-top: 1em;
         margin-bottom: 1em;
-        font-size: 1em;
+        font-size: 1.5em;
         @include media-breakpoint-up(sm) { font-size: 1.5em; }
         @include media-breakpoint-up(md) { font-size: 2em; }
         @include media-breakpoint-up(lg) { font-size: 2em; }
+        @include media-breakpoint-up(xl) { font-size: 2em; }
+    }
+
+    h2 {
+        margin-top: 1em;
+        margin-bottom: 1em;
+        font-size: 1em;
+        color: white;
+        @include media-breakpoint-up(sm) { font-size: 1.25em; }
+        @include media-breakpoint-up(md) { font-size: 1.5em; }
+        @include media-breakpoint-up(lg) { font-size: 1.75em; }
         @include media-breakpoint-up(xl) { font-size: 2em; }
     }
 }
