Changed default color. Added contact layout. Added mailto links.

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -42,7 +42,7 @@ $green:   #56CC9D !default;
 $teal:    #20c997 !default;
 $cyan:    #6CC3D5 !default;
 
-$primary:       #FFCE67 !default;
+$primary:       rgb(219, 159, 28) !default;
 $secondary:     #F3969A !default;
 $success:       $green !default;
 $info:          $cyan !default;
