--- a/assets/main.scss
+++ b/assets/main.scss
@@ -128,6 +128,12 @@
 
 }
 
+a.btn:hover {
+    transform:scale(1.1, 1.1);
+    -webkit-transform:scale(1.1, 1.1);
+    -moz-transform:scale(1.1, 1.1);
+}
+
 main {
 
     img {
