--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -23,7 +23,7 @@
           }
         </script>
         <script async defer
-          src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap">
+          src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBoc243qc5cWZG7KIXRj-0Wwt6tzkoIGVI&callback=initMap">
         </script>
       </div>
 
