--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,6 +10,7 @@
       </div>
 
       <div class="col-sm">
+        <div id="map"></div>
         <script>
           // Initialize and add the map
           function initMap() {
