--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,22 +10,9 @@
       </div>
 
       <div class="col-sm">
-        <div id="map"></div>
-        <script>
-          // Initialize and add the map
-          function initMap() {
-            // The location of Uluru
-            var uluru = {lat: -25.344, lng: 131.036};
-            // The map, centered at Uluru
-            var map = new google.maps.Map(
-                document.getElementById('map'), {zoom: 4, center: uluru});
-            // The marker, positioned at Uluru
-            var marker = new google.maps.Marker({position: uluru, map: map});
-          }
-        </script>
-        <script async defer
-          src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBoc243qc5cWZG7KIXRj-0Wwt6tzkoIGVI&callback=initMap">
-        </script>
+        <iframe frameborder="0" style="border:0"
+          src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBoc243qc5cWZG7KIXRj-0Wwt6tzkoIGVI&q=Tresor+9,Neuchâtel" allowfullscreen>
+        </iframe>
       </div>
 
     </div>
