--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,8 +9,8 @@
         <img src="/assets/images/footer.jpg" class="img-fluid" alt="Responsive image">
       </div>
 
-      <div class="col-sm">
-        <iframe frameborder="0" style="border:0"
+      <div class="col-sm embed-responsive">
+        <iframe
           src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBoc243qc5cWZG7KIXRj-0Wwt6tzkoIGVI&q=Tresor+9,Neuchâtel" allowfullscreen>
         </iframe>
       </div>
