--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
 
       <div class="col-sm embed-responsive">
         <iframe
-          src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBoc243qc5cWZG7KIXRj-0Wwt6tzkoIGVI&q=Tresor+9,Neuchâtel" allowfullscreen>
+          src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBoc243qc5cWZG7KIXRj-0Wwt6tzkoIGVI&q=place_id:ChIJW7_0mREKjkcRnd7wfaLbxa0" allowfullscreen>
         </iframe>
       </div>
 
