--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,14 +3,14 @@
   <div class="container">
 
     <h2>Rue du Trésor 9, 2000 Neuchâtel</h2>
-    
+
     <div class="row">
 
-      <div class="col-sm">
+      <div class="col-sm-6">
         <img src="/assets/images/footer.jpg" class="img-fluid" alt="Responsive image">
       </div>
 
-      <div class="col-sm embed-responsive">
+      <div class="col-sm-6 embed-responsive">
         <iframe
           src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBoc243qc5cWZG7KIXRj-0Wwt6tzkoIGVI&q=place_id:ChIJW7_0mREKjkcRnd7wfaLbxa0" allowfullscreen>
         </iframe>
