Made footer look better

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,11 +6,11 @@
 
     <div class="row">
 
-      <div class="col-sm-6">
+      <div class="col-lg-6">
         <img src="/assets/images/footer.jpg" class="img-fluid" alt="Responsive image">
       </div>
 
-      <div class="col-sm-6 embed-responsive">
+      <div class="col-lg-6 embed-responsive">
         <iframe
           src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBoc243qc5cWZG7KIXRj-0Wwt6tzkoIGVI&q=place_id:ChIJW7_0mREKjkcRnd7wfaLbxa0" allowfullscreen>
         </iframe>
