--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,10 +10,12 @@
         <img src="/assets/images/footer.jpg" class="img-fluid" alt="Responsive image">
       </div>
 
-      <div class="col-lg-6 embed-responsive">
-        <iframe
-          src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBoc243qc5cWZG7KIXRj-0Wwt6tzkoIGVI&q=place_id:ChIJW7_0mREKjkcRnd7wfaLbxa0" allowfullscreen>
-        </iframe>
+      <div class="col-lg-6">
+        <div class="embed-responsive">
+          <iframe
+            src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBoc243qc5cWZG7KIXRj-0Wwt6tzkoIGVI&q=place_id:ChIJW7_0mREKjkcRnd7wfaLbxa0" allowfullscreen>
+          </iframe>
+        </div>
       </div>
 
     </div>
