--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,6 +13,7 @@
       <div class="col-lg-6">
         <div class="embed-responsive">
           <iframe
+            class="embed-responsive-item"
             src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBoc243qc5cWZG7KIXRj-0Wwt6tzkoIGVI&q=place_id:ChIJW7_0mREKjkcRnd7wfaLbxa0" allowfullscreen>
           </iframe>
         </div>
