--- a/assets/main.scss
+++ b/assets/main.scss
@@ -158,6 +158,62 @@ a.btn:hover {
     }
 }
 
+.embed-responsive-4by3 {
+    margin-top: 1em;
+    margin-bottom: 2em;
+
+    @include media-breakpoint-up(xs) { 
+        margin-left: 1em;
+        margin-right: 1em;
+    }
+    @include media-breakpoint-up(sm) { 
+        margin-left: 1em;
+        margin-right: 1em;
+    }
+
+    @include media-breakpoint-up(md) { 
+        margin-left: 1em;
+    }
+
+    @include media-breakpoint-up(lg) { 
+        margin-left: 1em;
+    }
+
+    @include media-breakpoint-up(xl) { 
+        margin-left: 1em;
+    }
+
+}
+
+.footer-img {
+    margin-top: 1em;
+    margin-bottom: 2em;
+    padding-left: 0em;
+    padding-right: 0em;
+
+    @include media-breakpoint-up(xs) { 
+        margin-left: 1em;
+        margin-right: 1em;
+    }
+    @include media-breakpoint-up(sm) { 
+        margin-left: 1em;
+        margin-right: 1em;
+    }
+
+    @include media-breakpoint-up(md) { 
+        margin-right: 1em;
+    }
+
+    @include media-breakpoint-up(lg) { 
+        margin-right: 1em;
+    }
+
+    @include media-breakpoint-up(xl) { 
+        margin-right: 1em;
+    }
+
+}
+
 main {
 
     img {
