Added email address HIN

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -12,6 +12,9 @@
     {%- if include.email -%}
         E-Mail: <a href="mailto:{{ include.email }}">{{ include.email }}</a> <br />
     {%- endif include.email -%}
+    {%- if include.email2 -%}
+        E-Mail: <a href="mailto:{{ include.email2 }}">{{ include.email2 }}</a> <br />
+    {%- endif include.email2 -%}
     {%- if include.phone -%}
         Téléphone: {{ include.phone }} <br />
     {%- endif include.phone -%}
