Updated Poulsen Page. Deleted Waeber Page.

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -21,6 +21,9 @@
             <a class="nav-link" href="https://www.therapies-naturelles-et-complementaires.ch" target="_blank">Annabelle Baumann</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="https://www.osteopathe-neuchatel.ch/" target="_blank">Anne Waeber</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="https://www.pauline-osteo.ch/" target="_blank">Pauline Robert-Charrue</a>
           </li>
         </ul>
