--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -26,6 +26,9 @@
           <li class="nav-item">
             <a class="nav-link" href="https://massotherapie-neuchatel.ch/" target="_blank">Pedro Gaspar</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://www.physioneuchatel.ch" target="_blank">Valeria Mandru</a>
+          </li>
         </ul>
       </div>
     </div>
